LDFLAGS = -lXterminal
bin_PROGRAMS = exapp exbar exdlg exevent exfreeapp exhlist exlist exmyapp \
	       extab exwin
exapp_SOURCES = exapp.cc
exbar_SOURCES = exbar.cc
exdlg_SOURCES = exdlg.cc
exevent_SOURCES = exevent.cc
exfreeapp_SOURCES = exfreeapp.cc
exhlist_SOURCES = exhlist.cc
exlist_SOURCES = exlist.cc
exmyapp_SOURCES = exmyapp.cc
extab_SOURCES = extab.cc
exwin_SOURCES = exwin.cc
