# include/Makefile.am for Xterminal library
# Copyright (c) 1999-2001 Dragos Acostachioaie

include_HEADERS	= xbclass.h xconfig.h xevent.h xobject.h xtapp.h xtbar.h \
		  xtbutton.h xtcombobox.h xtdesktop.h xtdialog.h xterminal.h \
		  xtfield.h xthlist.h xtlib.h xtlist.h xtmenu.h xtother.h \
		  xtpassive.h xtscreen.h xttab.h xttexteditor.h xttools.h \
		  xtwindow.h RegionalInfo.h

uninstall-local:
	rmdir $(includedir)
