# src/Makefile.am for Xterminal library
# Copyright (c) 1996-2001 Dragos Acostachioaie

lib_LTLIBRARIES = libXterminal.la
libXterminal_la_SOURCES = xbclass.cc xevent.cc xobject.cc xtapp.cc xtbar.cc \
			  xtbutton.cc xtcombobox.cc xtdesktop.cc xtdialog.cc \
			  xtfield.cc xthlist.cc xtlib.cc xtlist.cc xtmenu.cc \
			  xtother.cc xtpassive.cc xtscreen.cc xttab.cc \
			  xttexteditor.cc xttools.cc xtwindow.cc \
			  RegionalInfo.cc
libXterminal_la_LDFLAGS = -version-info @CURRENT@:@REVISION@:@AGE@
